# specl

./: CMakeLists.txt  README.md
include/: speclang.h
src/: read.c  read.h  spcl.c  tests.cpp  utils.h
tests/: assertions.spcl  benchmark.spcl  pot_test.spcl  test.geom  test.spcl
